@@ -1,9 +1,9 @@
 // SPDX-License-Identifier: BSD-2-Clause
-/* Copyright (C) 2014 - 2020 Intel Corporation. */
+/* Copyright (C) 2014 - 2021 Intel Corporation. */
 
 #define MEMKIND_VERSION_MAJOR 1
-#define MEMKIND_VERSION_MINOR 10
-#define MEMKIND_VERSION_PATCH 1
+#define MEMKIND_VERSION_MINOR 11
+#define MEMKIND_VERSION_PATCH 0
 
 #include <memkind.h>
 #include <memkind/internal/memkind_default.h>
